# mini-caffe

./: CMakeLists.txt  README.md  mini-caffe.cmake
src/util/: io.cpp
